src/styles/main.scss
/* Imports */

@import 'imports/reset';


// Right from the Google Maps API example to get the map to display
html,
body {
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
}

button:disabled {
    background-color: #ccc;
}

/*** The map needs to have a specific size in order to display. ***/

#map {
    height: 100%;
    width: 100%;
    position: absolute;
    z-index: 1; // we was the right-divs to appear over the map
}

.off-screen {
    position: absolute;
    z-index: 2;
    overflow: scroll;
    transition: 0.15s;
    top: 0;
    background-color: white;
}

.left-divs {
    @extend .off-screen;
    height: 30%;
}

.right-divs {
    @extend .off-screen;
    height: 100%;
}

/* This is just for testing */
#list-div{
    text-align: center;
}

.tab-plain {
    position: absolute;
    z-index: 3;
    transition: 0.15s;
}

.tab-highlight {
    opacity: 0;
    position: absolute;
    z-index: 4;
    transition: 0.15s;
}

.tab-back {
    opacity: 0;
    position: absolute;
    z-index: 5;
    transition: 0.15s;
}

#list-tab {
    @extend .tab-plain;
}

#list-tab-highlight {
    @extend .tab-highlight;
}

#list-tab-back {
    @extend .tab-back;
}

#twitter-tab {
    @extend .tab-plain;
}

#twitter-tab-highlight {
    @extend .tab-highlight;
}

#twitter-tab-back {
    @extend .tab-back;
}

#filter-tab {
    @extend .tab-plain;
}

#filter-tab-highlight {
    @extend .tab-highlight;
}

#filter-tab-back {
    @extend .tab-back;
}

.tab-off {
    right: -0.5%;
}

.left-div-on {
    left: 0%;
    z-index: 6; // Needs to be on top of the tabs from the other right-divs
}

.right-div-on {
    right: 0%;
    z-index: 6; // Needs to be on top of the tabs from the other right-divs
}


/*** Each InfoWindow that appears when markers are clicked has a div inside them
    with this class. ***/

.current-display {
    margin: 0.5em;
}

.info-title {
    font-weight: bold;
    font-size: 1.15em;
}

#footer {
    z-index: 3;
    text-align: center;
    position: absolute;
    bottom: 0;
    height: 5%;
    width: 100%;
}

@media only screen and (min-width: 700px) {
    .right-divs {
        width: 30%;
    }
    .left-divs {
        width: 50%;
    }
    .tab-on {
        right: 29.5%;
    }
    .right-div-off {
        right: -30%;
    }
    .left-div-off {
        left: -50%;
    }
}

@media only screen and (max-width: 700px) {
    .off-screen {
        width: 90%;
    }
    .tab-on {
        right: 89.5%;
    }
    .right-div-off {
        right: -90%;
    }
    .left-div-off {
        left: -90%;
    }
}

